--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body {
 }
 
 .wrapper {
-  background-color: lightpink;
+  background-color: lightblue;
   
   max-width: 100%;
   display: flex;
