--- a/style.css
+++ b/style.css
@@ -34,6 +34,17 @@ html, body {
   align-items: center;
   justify-content: center;
 }
+
+.hit_count {
+  background-color: lightblue;
+  margin: 5px;
+  max-width: 50%;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: bottom;
+}
+
 .name {
   font-family: 'Roboto', sans-serif;
   margin-bottom: 2px;
