--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ html, body {
 .hit_count {
   background-color: lightblue;
   margin: 5px;
-  max-width: 50%;
+  max-height: 20%;
   flex: 1;
   display: flex;
   flex-direction: row;
