--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html, body {
   max-width: 100%;
   display: flex;
   flex-direction: row;
-  height: 100%;
+  height: 80%;
 }
 
 .left, .right {
@@ -38,7 +38,10 @@ html, body {
 .hit_count {
   background-color: lightblue;
   margin: 5px;
-  max-height: 20%;
+  max-height: 20%;  
+  display: flex;
+  flex-direction: row;
+  height: 20%;
   
 }
 
