--- a/style.css
+++ b/style.css
@@ -36,12 +36,13 @@ html, body {
 }
 
 .hit_count {
-  background-color: lightblue;
+  background-color: blue;
   margin: 5px;
   max-height: 20%;  
   display: flex;
   flex-direction: row;
   height: 20%;
+  bottom : 10px;
   
 }
 
