--- a/style.css
+++ b/style.css
@@ -38,10 +38,7 @@ html, body {
 .hit_count {
   background-color: blue;
   margin: 5px;
-  max-height: 20%;  
-  display: flex;
-  flex-direction: row;
-  height: 20%;
+  position : absolute;
   bottom : 10px;
   
 }
