--- a/css_about.css
+++ b/css_about.css
@@ -1,3 +1,23 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+
+html {
+  box-sizing: border-box;
+}
+.about-section {
+  padding: 50px;
+  text-align: center;
+  background-color: #474e5d;
+  color: white;
+}
+.title {
+  color: grey;
+}
+
+
+
 /* Style all font awesome icons */
 .fa {
   padding: 20px;
