--- a/css_about.css
+++ b/css_about.css
@@ -4,7 +4,7 @@ body {
 }
 
 html {
-  box-sizing: border-box;
+   box-sizing: border-box;
 }
 .about-section {
   padding: 50px;
@@ -15,16 +15,26 @@ html {
 .title {
   color: grey;
 }
-
+.contest{
+	
+}
+.social{
+	align-content:center;
+	text-align:center;
+	padding:10px;
+	
+	
+}
 
 
 /* Style all font awesome icons */
 .fa {
   padding: 20px;
   font-size: 30px;
-  width: 50px;
+  width: 20px;
   text-align: center;
   text-decoration: none;
+  border-radius:50%;
 }
 
 /* Add a hover effect if you want */
@@ -45,3 +55,22 @@ html {
   background: #55ACEE;
   color: white;
 }
+
+/* Linkedin */
+.fa-linkedin {
+  background: #55ACEE;
+  color: white;
+}
+
+/* Youtube */
+.fa-youtube {
+  background: #c4302b;
+  color: white;
+}
+
+/* Instagram */
+.fa-instagram {
+  background: #3f729b ;
+  color: white;
+}
+
