css_about.css update

--- a/css_about.css
+++ b/css_about.css
@@ -1,9 +1,9 @@
-body {
+.body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
 
-html {
+.html {
    box-sizing: border-box;
 }
 .about-section {
